--- a/public/css/main-content.css
+++ b/public/css/main-content.css
@@ -1,5 +1,5 @@
 #main-content{
-    margin-top:30px;
+    margin:50px 0px;
     /* border:1px solid black; */
     /* background-color:#ffff00; */
 }
@@ -27,15 +27,17 @@
     display:flex;
     flex-direction:row;
     justify-content:space-evenly;
-    margin-left:65px;
-    /* border:1px solid #000000; */
+
+    margin:50px 20px; 
+    /* margin-left:65px; */
 }
 .row2-3columns{
     display:flex;
     flex-direction:row;
     justify-content:space-evenly;
-    margin-left:65px;
-    /* border:1px solid #000000; */
+    
+    margin:50px 20px; 
+    /* margin-left:65px; */
 }
 /* .row3-3columns{
     display:flex;
