--- a/public/css/nav.css
+++ b/public/css/nav.css
@@ -2,29 +2,23 @@
 nav.css: the main menu, the two top menus, and the logo
 */
 
-/* styling for the complete navigation container */ 
+/* styling for the navigation container */ 
 #main-nav-wrapper{
     height:60px;
-    display:flex;    
-    /* font-size:16px; */
+    display:flex;
 
     margin-top:50px;
 }
-
 /* styling for the logo-image */
 .top-img-logo{
     width:8%;
 }
-
-
-
 .nav-section{
     /* width:90%; */
     /* border:1px solid blue; */
 }
 .top-menu-1{
     width:50%;
-    /* border:1px solid green; */
 }
 .top-menu-1{
     width:100%;
@@ -34,7 +28,6 @@ nav.css: the main menu, the two top menus, and the logo
 }
 .top-menu-1 li{
     padding:20px 15px 20px 20px;
-    /* padding-left:30px; */
     font-size:14px;
 }
 .top-menu-1 a{
@@ -42,20 +35,16 @@ nav.css: the main menu, the two top menus, and the logo
     color:#6f6f6f;
     font-family:Arial, Helvetica, sans-serif;
     font-weight: 100;
-    cursor:grabbing;
+    cursor: pointer;
 }
-
-
 .top-menu-2{
     width:50%;
-    /* border:1px solid purple; */
 }
 .top-menu-2{
     width:100%;
     display:flex;
     flex-direction:row;
-    margin-left:30px;  
-    /* border:1px solid orangered; */
+    margin-left:30px; 
 }
 .top-menu-2 li{
     padding:20px 15px 20px 20px;
@@ -66,11 +55,9 @@ nav.css: the main menu, the two top menus, and the logo
     color:#6f6f6f;
     font-family:Arial, Helvetica, sans-serif;
     font-weight:100;
-    cursor:grabbing;
+    cursor: pointer;
 }
-
 .main-menu{
-   /* border:1px solid blue; */
     margin-bottom:20px;
     margin-left:140px;
 }
@@ -91,5 +78,5 @@ nav.css: the main menu, the two top menus, and the logo
     color:#292929;
     font-family:Arial, Helvetica, sans-serif;
     font-family:100;
-    cursor:grabbing;
+    cursor: pointer;
 }
