--- a/public/css/nav.css
+++ b/public/css/nav.css
@@ -14,8 +14,8 @@ nav.css: the main menu, the two top menus, and the logo
     width:8%;
 }
 .nav-section{
-    /* width:90%; */
-    /* border:1px solid blue; */
+    padding: 0px;
+    margin: 0px;
 }
 .top-menu-1{
     width:50%;
@@ -29,11 +29,11 @@ nav.css: the main menu, the two top menus, and the logo
 .top-menu-1 li{
     padding:20px 15px 20px 20px;
     font-size:14px;
+    font-family:Arial, Helvetica, sans-serif;
 }
 .top-menu-1 a{
     text-decoration:none;
-    color:#6f6f6f;
-    font-family:Arial, Helvetica, sans-serif;
+    color:#292929;
     font-weight: 100;
     cursor: pointer;
 }
@@ -49,11 +49,11 @@ nav.css: the main menu, the two top menus, and the logo
 .top-menu-2 li{
     padding:20px 15px 20px 20px;
     font-size:14px;
+    font-family:Arial, Helvetica, sans-serif;
 }
 .top-menu-2 a{
     text-decoration:none;
-    color:#6f6f6f;
-    font-family:Arial, Helvetica, sans-serif;
+    color: #292929;;
     font-weight:100;
     cursor: pointer;
 }
@@ -72,11 +72,11 @@ nav.css: the main menu, the two top menus, and the logo
     color:#292929;
     padding:20px 15px 20px 20px;
     font-size:16px;
+    font-family:Arial, Helvetica, sans-serif;
 }
 .main-menu a{
     text-decoration:none;
     color:#292929;
-    font-family:Arial, Helvetica, sans-serif;
     font-family:100;
     cursor: pointer;
 }
