--- a/public/css/main-content.css
+++ b/public/css/main-content.css
@@ -1,7 +1,5 @@
 #main-content{
     margin:50px 0px;
-    /* border:1px solid black; */
-    /* background-color:#ffff00; */
 }
 .h2header{    
     font-family:Arial, Helvetica, sans-serif;
@@ -15,16 +13,13 @@
     font-weight:400;
     line-height: 1.2;
     color:#292929;
-    /* font-size: 1.5rem; */
 }
 .six-offers{
     color:#292929;
     padding:15px 15px;
     margin:30px 5px;
-    /* border:1px solid #000000; */
 }
 #main-content .row1to6-grid{
-    /* margin-top:1rem; */
     display:grid;
     grid-template-columns:1fr 1fr 1fr;
     grid-template-rows:600px 675px;
@@ -33,16 +28,24 @@
 
 
 /* Tablet View */
-@media all and (min-width: 768px) and (max-width: 959px){
+/* @media all and (min-width: 768px) and (max-width: 959px){
     .main-wrapper{
         width:100%;
     }
     .main-container{
         width:100%
+    }
+    #main-content .row1to6-grid{
+        display:grid;
+        grid-template-columns:1fr 1fr;
+        grid-template-rows:450px 450px 450px;
+        grid-gap:10px;
     }    
-}
+} */
+
+/* header main-nav-wrapper top-menu-1 top-menu-2 main-menu photo-gallery main-content */
     /* Smartphone View */
-    @media all and (max-width: 767px){
+    /* @media all and (max-width: 767px){
     #main-wrapper{
         width:100%;
     }
@@ -56,14 +59,11 @@
         color:#292929;
         padding:15px 15px;
         margin:10px 10px;
-        /* margin-right: 50px; */
-        border:1px solid #000000;
     }
     #main-content .row1to6-grid{
-        /* margin-top:1rem; */
         display:grid;
-        grid-template-columns:1fr 1fr;
-        grid-template-rows:450px 450px 700;
+        grid-template-columns:1fr;
+        grid-template-rows:450px 450px 450px 450px 450px 450px;
         grid-gap:10px;
     }
     .footer .top-footer-menu{
@@ -75,4 +75,4 @@
     .main-footer-section .main-footer-menu{
         width:100%;
     }
-}
+} */
