edits for mobile.

--- a/public/css/main-content.css
+++ b/public/css/main-content.css
@@ -27,6 +27,80 @@
 }
 
 
+/* Desktop View */
+@media all and (max-width: 960px){
+    .main-wrapper{
+        width:100%;
+        text-align: center;
+    }
+    .main-container{
+        width:100%;
+        text-align: center;
+    }
+    .disclaimer{
+        display: left;
+    }
+}
+    /* Tablet View */
+    @media all and (min-width: 768px) and (max-width: 959px){
+    .main-wrapper{
+        width:100%;
+        text-align: center;
+    }
+    .main-container{
+        width:100%;
+        text-align: center;
+    }
+    .disclaimer{
+        display: left;
+    }    
+}
+    /* Smartphone View */
+    @media all and (max-width: 767px){
+    #main-wrapper{
+        width:100%;
+        text-align: center;
+    }
+    .main-container{
+        width:100%;
+        text-align: center;
+    }
+    .disclaimer{
+        display: none;
+    }
+    .six-offers{
+        color:#292929;
+        padding:15px 15px;
+        margin:10px 10px;
+        /* margin-right: 50px; */
+        /* border:1px solid #000000; */
+    }
+    #main-content .row1to6-grid{
+        /* margin-top:1rem; */
+        display:grid;
+        grid-template-columns:1fr 1fr;
+        grid-template-rows:450px 450px 700;
+        grid-gap:10px;
+    }
+    .six-social-media-icons{
+        width:100%;
+        text-align: center;
+    }
+    .six-footer-icon-links{
+        width:100%;
+        text-align: center;
+    }
+    .footer .top-footer-menu{
+        width:100%;
+    }
+    .footer .top-footer-menu six-footer-menus{
+        width:100%;
+    }
+    .main-footer-section .main-footer-menu{
+        width:100%;
+    }
+
+
 /* Tablet View */
 /* @media all and (min-width: 768px) and (max-width: 959px){
     .main-wrapper{
