--- a/public/css/main.css
+++ b/public/css/main.css
@@ -5,7 +5,7 @@
 @import "../css/main-content.css";
 @import "../css/footer.css";
 
-@import "nutrition-calculator.css";
+/* @import "nutrition-calculator.css"; */
 /* public\css\main-content.css */
 
 html{
@@ -19,12 +19,8 @@ body{
 }
 
 #main-wrapper{
-    /* width:100%; */
-    /* width:1250px;
-    margin:0 auto; */
+    margin:0 auto;
 }
-
-
 button{
     width:200px;
     background:#FFBC0D;
@@ -34,16 +30,8 @@ button{
     font-size:16px;
     font-family:Arial, Helvetica, sans-serif;
 }
-
 button a{
     text-decoration: none;
     color:#292929;
-
-    /* width:200px;
-    background:#FFBC0D;
-    color:#292929;
-    padding:13px 25px;
-    border-radius:7px;
-    font-size:16px;
-    font-family:Arial, Helvetica, sans-serif; */
+    font-family:Arial, Helvetica, sans-serif;
 }
