--- a/public/css/main-content.css
+++ b/public/css/main-content.css
@@ -28,7 +28,7 @@
 
 
 /* Desktop View */
-@media all and (max-width: 960px){
+/* @media all and (max-width: 960px){
     .main-wrapper{
         width:100%;
         text-align: center;
@@ -40,7 +40,7 @@
     .disclaimer{
         display: left;
     }
-}
+} */
     /* Tablet View */
     @media all and (min-width: 768px) and (max-width: 959px){
     .main-wrapper{
