--- a/public/css/nav.css
+++ b/public/css/nav.css
@@ -80,3 +80,66 @@ nav.css: the main menu, the two top menus, and the logo
     font-family:100;
     cursor: pointer;
 }
+
+
+/* Tablet View */
+/* @media all and (min-width: 768px) and (max-width: 959px){
+    .main-wrapper{
+        width:100%;
+        text-align: center;
+    }
+    .main-container{
+        width:100%;
+        text-align: center;
+    }
+    .disclaimer{
+        display: left;
+    }    
+} */
+
+    /* Smartphone View */
+    /* @media all and (max-width: 767px){
+    #main-wrapper{
+        width:100%;
+        text-align: center;
+    }
+    .main-container{
+        width:100%;
+        text-align: center;
+    }
+    .disclaimer{
+        display: none;
+    }
+    header{
+        width:100%;
+        text-align:center;
+    }
+    .six-offers{
+        color:#292929;
+        padding:15px 15px;
+        margin:10px 10px;
+    }
+    #main-content .row1to6-grid{
+        display:grid;
+        grid-template-columns:1fr 1fr;
+        grid-template-rows:450px 450px 700;
+        grid-gap:10px;
+    }
+    .six-social-media-icons{
+        width:100%;
+        text-align: center;
+    }
+    .six-footer-icon-links{
+        width:100%;
+        text-align: center;
+    }
+    .footer .top-footer-menu{
+        width:100%;
+    }
+    .footer .top-footer-menu six-footer-menus{
+        width:100%;
+    }
+    .main-footer-section .main-footer-menu{
+        width:100%;
+    }
+} */
