--- a/public/css/main.css
+++ b/public/css/main.css
@@ -61,9 +61,28 @@ button a{
     .disclaimer{
         display: none;
     }
+
+
     header{
         width:100%;
-        text-align:center;
+        margin-bottom:70px;
+        /* text-align:center; */
+    }
+    #main-nav-wrapper{
+        /* width:100%; */
+        /* text-align:center; */
+    }
+    #main-nav-wrapper .top-menu-1{
+        /* width:100%; */
+        /* text-align:center; */
+    }
+    #main-nav-wrapper .top-menu-2{
+        /* width:100%; */
+        /* text-align:center; */
+    }
+    #main-nav-wrapper .main-menu{
+        /* width:100%; */
+        /* text-align:center; */
     }
 
 
