--- a/public/css/header.css
+++ b/public/css/header.css
@@ -4,80 +4,89 @@ header{
     padding-left:100px;
     margin-bottom: 30px;
 }
+/*
+nav.css: the main menu, the two top menus, and the logo
+*/
 
+/* styling for the navigation container */ 
+#main-nav-wrapper{
+    height:60px;
+    display:flex;
 
-/* Tablet View */
-/* @media all and (min-width: 768px) and (max-width: 959px){ */
-    /* header{    
-        background-color: #ffffff;
-        height: 120px;
-        padding-left:100px;
-        margin-bottom: 30px;
-    }
-    .main-wrapper{
-        width:100%;
-        text-align: center;
-    }
-    .main-container{
-        width:100%;
-        text-align: center;
-    }
-    .disclaimer{
-        display: left;
-    }    
-} */
+    margin-top:50px;
+}
+/* styling for the logo-image */
+.top-img-logo{
+    width:8%;
+}
+.nav-section{
+    padding: 0px;
+    margin: 0px;
+}
+.top-menu-1{
+    width:50%;
+}
+.top-menu-1{
+    width:100%;
+    display:flex;
+    flex-direction:row;
+    margin-left:30px;
+}
+.top-menu-1 li{
+    padding:20px 15px 20px 20px;
+    font-size:14px;
+    font-family:Arial, Helvetica, sans-serif;
+}
+.top-menu-1 a{
+    text-decoration:none;
+    color:#292929;
+    font-weight: 100;
+    cursor: pointer;
+}
+.top-menu-2{
+    width:50%;
+}
+.top-menu-2{
+    width:100%;
+    display:flex;
+    flex-direction:row;
+    margin-left:30px; 
+}
+.top-menu-2 li{
+    padding:20px 15px 20px 20px;
+    font-size:14px;
+    font-family:Arial, Helvetica, sans-serif;
+}
+.top-menu-2 a{
+    text-decoration:none;
+    color: #292929;;
+    font-weight:100;
+    cursor: pointer;
+}
+.main-menu{
+    margin-bottom:20px;
+    margin-left:140px;
+}
+.main-menu ul{
+    display:flex;
+    flex-direction:row;
+    justify-content:center;
+    justify-content:flex-start;
+}
+.main-menu li{
+    list-style-type:none;
+    color:#292929;
+    padding:20px 15px 20px 20px;
+    font-size:16px;
+    font-family:Arial, Helvetica, sans-serif;
+}
+.main-menu a{
+    text-decoration:none;
+    color:#292929;
+    font-family:100;
+    cursor: pointer;
+}
+
 
     /* Smartphone View */
-    /* @media all and (max-width: 767px){ */
-    /* header{    
-        background-color: #ffffff;
-        height: 120px;
-        padding-left:100px;
-        margin-bottom: 50px;
-    }
-    #main-wrapper{
-        width:100%;
-        text-align: center;
-    }
-    .main-container{
-        width:100%;
-        text-align: center;
-    }
-    .disclaimer{
-        display: none;
-    }
-    header{
-        width:100%;
-        text-align:center;
-    } */
-
-    /* .six-offers{
-        color:#292929;
-        padding:15px 15px;
-        margin:10px 10px;
-    }
-    #main-content .row1to6-grid{
-        display:grid;
-        grid-template-columns:1fr 1fr;
-        grid-template-rows:450px 450px 700;
-        grid-gap:10px;
-    } */
-
-    /* .six-social-media-icons{
-        width:100%;
-        text-align: center;
-    }
-    .six-footer-icon-links{
-        width:100%;
-        text-align: center;
-    }
-    .footer .top-footer-menu{
-        width:100%;
-    }
-    .footer .top-footer-menu six-footer-menus{
-        width:100%;
-    }
-    .main-footer-section .main-footer-menu{
-        width:100%;
-    } */
-/* } */
+ 
