--- a/public/css/main.css
+++ b/public/css/main.css
@@ -69,7 +69,7 @@ button a{
         /* text-align:center; */
     }
 
-    /* .six-offers{
+    .six-offers{
         color:#292929;
         padding:15px 15px;
         margin:10px 10px;
@@ -83,7 +83,14 @@ button a{
     .six-social-media-icons{
         width:100%;
         text-align: center;
-    } */
+    }
+
+    .two-download-icons{
+        display: flex;
+    }
+    .six-social-media-icons{
+        padding-left: 100px;
+    }
 
 
     /* .six-footer-icon-links{
