--- a/public/css/main.css
+++ b/public/css/main.css
@@ -68,7 +68,6 @@ button a{
         margin-bottom:70px;
         /* text-align:center; */
     }
-
     .six-offers{
         color:#292929;
         padding:15px 15px;
@@ -84,12 +83,15 @@ button a{
         width:100%;
         text-align: center;
     }
-
     .two-download-icons{
         display: flex;
     }
     .six-social-media-icons{
-        padding-left: 100px;
+        /* padding-left: 100px; */
+        padding-left: 10px;
+    }
+    .googleplay-apple-apps{
+        padding-left:100px;
     }
 
 
