--- a/public/css/main-content.css
+++ b/public/css/main-content.css
@@ -25,9 +25,15 @@
     grid-template-rows:600px 675px;
     grid-gap:5px;
 }
+#main-content .six-social-media-icons{
+    /* padding-left:150px;  */
+    /* margin-top:50px; */
+}
 #main-content .googleplay-apple-apps{
-    padding-left:450px;
-    display: flex;
+    /* display: flex; */
+    /* flex-direction: row; */
+    /* margin-top:20px;  */
+    /* padding-left:410px; */
 }
 
 
@@ -39,23 +45,15 @@
         grid-template-rows:450px 450px 700;
         grid-gap:10px;
     }
-    /* #main-content .six-footer-icon-links{
-        width:100%;
-        text-align: center;
-    } */
     #main-content .six-social-media-icons{
-        display: flex;
-        /* padding-left:100px; */
-        padding-left:200px;
-    }
-    #main-content .two-download-icons{
-        display: flex;
-        /* padding-left:10px; */
-        padding-right:400px;
+        /* padding-left:150px;  */
+        /* margin-top:50px; */
     }
     #main-content .googleplay-apple-apps{
-        padding-right:400px;
-        display: flex;
+        /* display: flex; */
+        /* flex-direction: row; */
+        /* margin-top:20px;  */
+        /* padding-left:10px; */
     }
 }
 
