--- a/public/css/main-content.css
+++ b/public/css/main-content.css
@@ -26,14 +26,22 @@
     grid-gap:5px;
 }
 #main-content .six-social-media-icons{
-    /* padding-left:150px;  */
-    /* margin-top:50px; */
+    padding-left:150px; 
+    margin-top:50px;
 }
 #main-content .googleplay-apple-apps{
-    /* display: flex; */
-    /* flex-direction: row; */
-    /* margin-top:20px;  */
-    /* padding-left:410px; */
+    display: flex;
+    flex-direction: row;
+    margin-top:20px; 
+    padding-left:410px;
+}
+#main-content .six-footer-icon-links{
+    display:flex; 
+    flex-direction:row; 
+    text-align:center;
+}
+#main-content .six-footer-icon-links li{
+    padding:10px 10px;
 }
 
 
@@ -48,12 +56,14 @@
     #main-content .six-social-media-icons{
         /* padding-left:150px;  */
         /* margin-top:50px; */
+        padding-left:50px; 
     }
     #main-content .googleplay-apple-apps{
         /* display: flex; */
-        /* flex-direction: row; */
-        /* margin-top:20px;  */
-        /* padding-left:10px; */
+        flex-direction: row;
+        margin-top:20px; 
+        /* padding-left:410px; */
+        padding-left:210px;
     }
 }
 
