--- a/public/css/main-content.css
+++ b/public/css/main-content.css
@@ -56,14 +56,14 @@
     #main-content .six-social-media-icons{
         /* padding-left:150px;  */
         /* margin-top:50px; */
-        padding-left:50px; 
+        padding-left:150px; 
     }
     #main-content .googleplay-apple-apps{
-        /* display: flex; */
+        display: flex;
         flex-direction: row;
         margin-top:20px; 
         /* padding-left:410px; */
-        padding-left:210px;
+        padding-left:300px;
     }
 }
 
