--- a/public/css/nav.css
+++ b/public/css/nav.css
@@ -1,13 +1,9 @@
-/*
-nav.css: the main menu, the two top menus, and the logo
-*/
+/* nav.css: the main menu, the two top menus, and the logo */
 
-/* styling for the navigation container */ 
 #main-nav-wrapper{
-    height:60px;
+    height:70px;
     display:flex;
-
-    margin-top:50px;
+    /* margin-top:50px; */
 }
 /* styling for the logo-image */
 .top-img-logo{
@@ -18,43 +14,42 @@ nav.css: the main menu, the two top menus, and the logo
     margin: 0px;
 }
 .top-menu-1{
-    width:50%;
-}
-.top-menu-1{
     width:100%;
     display:flex;
     flex-direction:row;
-    margin-left:30px;
+    margin-left:70px;
 }
 .top-menu-1 li{
     padding:20px 15px 20px 20px;
-    font-size:14px;
+    font-size:16px;
     font-family:Arial, Helvetica, sans-serif;
+    text-align:left;
 }
 .top-menu-1 a{
     text-decoration:none;
     color:#292929;
-    font-weight: 100;
+    font-weight: 500;
     cursor: pointer;
-}
-.top-menu-2{
-    width:50%;
 }
 .top-menu-2{
     width:100%;
     display:flex;
     flex-direction:row;
-    margin-left:30px; 
+    margin-left:350px; 
+}
+.top-menu-2 ul{
+    padding: 0px;
+    margin: 0px;
 }
 .top-menu-2 li{
-    padding:20px 15px 20px 20px;
-    font-size:14px;
+    padding:20px 55px 20px 20px;
+    font-size:16px;
     font-family:Arial, Helvetica, sans-serif;
 }
 .top-menu-2 a{
     text-decoration:none;
     color: #292929;;
-    font-weight:100;
+    font-weight:500;
     cursor: pointer;
 }
 .main-menu{
@@ -77,7 +72,7 @@ nav.css: the main menu, the two top menus, and the logo
 .main-menu a{
     text-decoration:none;
     color:#292929;
-    font-family:100;
+    font-family:500;
     cursor: pointer;
 }
 
