--- a/public/css/nav.css
+++ b/public/css/nav.css
@@ -20,7 +20,7 @@
     margin-left:70px;
 }
 .top-menu-1 li{
-    padding:20px 15px 20px 20px;
+    padding:20px 30px;
     font-size:16px;
     font-family:Arial, Helvetica, sans-serif;
     text-align:left;
@@ -42,7 +42,7 @@
     margin: 0px;
 }
 .top-menu-2 li{
-    padding:20px 55px 20px 20px;
+    padding:20px 30px;
     font-size:16px;
     font-family:Arial, Helvetica, sans-serif;
 }
@@ -65,7 +65,7 @@
 .main-menu li{
     list-style-type:none;
     color:#292929;
-    padding:20px 15px 20px 20px;
+    padding:20px;
     font-size:16px;
     font-family:Arial, Helvetica, sans-serif;
 }
@@ -76,43 +76,115 @@
     cursor: pointer;
 }
 
-
 /* Tablet View */
-/* @media all and (min-width: 768px) and (max-width: 959px){
-    .main-wrapper{
-        width:100%;
-        text-align: center;
+@media all and (min-width: 768px) and (max-width: 959px){ 
+        header{    
+            background-color: #ffffff;
+            height: 120px;
+            padding-left:25px;
+            margin-bottom: 30px;
+        }    
+        /* styling for the logo-image */
+        .top-img-logo{
+            width:8%;
+        }
+        .top-menu-1{
+            width:100%;
+            display:flex;
+            flex-direction:row;
+            margin-left:100px;
+        }
+        .top-menu-2{
+            width:100%;
+            display:flex;
+            flex-direction:row;
+            margin-left:250px; 
+        }
+        .main-menu{
+            margin-bottom:20px;
+            margin-top:20px;
+            margin-left:70px;
+        }
+        .main-menu li{
+            list-style-type:none;
+            color:#292929;
+            padding:20px;
+            font-size:16px;
+            font-family:Arial, Helvetica, sans-serif;
+        }            
+        .top-menu-2 li{
+            padding:10px 50px 10px 10px;
+            font-size:16px;
+            font-family:Arial, Helvetica, sans-serif;
+        }
+    #main-content .row1to6-grid{
+        display:grid;
+        grid-template-columns:1fr 1fr;
+        grid-template-rows:450px 450px 700;
+        grid-gap:10px;
     }
-    .main-container{
-        width:100%;
-        text-align: center;
+    #main-content .six-social-media-icons{
+        margin-top:50px;
+        padding-left:300px; 
     }
-    .disclaimer{
-        display: left;
+    #main-content .googleplay-apple-apps{
+        display: flex;
+        flex-direction: row;
+        margin-top:20px;
+        padding-left:250px;
+    }
+}
+/* Smartphone View */
+@media all and (max-width: 767px){
+    header{    
+        background-color: #ffffff;
+        height: 120px;
+        padding-left:10px;
+        margin-bottom: 30px;
+    }
+    /* styling for the logo-image */
+    .top-img-logo{
+        width:8%;
+    }
+    .top-menu-1{
+        padding: 20px;
+        /* padding:10px 50px 10px 10px; */
+        /* width:100%; */
+        display:flex;
+        flex-direction:row;
+        margin-left:40px;
+    }
+    .top-menu-2{
+        width:100%;
+        display:flex;
+        flex-direction:row;
+        margin-left:250px; 
     }    
-} */
-
-    /* Smartphone View */
-    /* @media all and (max-width: 767px){
-    #main-wrapper{
-        width:100%;
-        text-align: center;
+    .main-menu{
+        margin-bottom:20px;
+        margin-top:20px;
+        margin-left:50px;
     }
-    .main-container{
-        width:100%;
-        text-align: center;
-    }
-    .disclaimer{
-        display: none;
-    }
-    header{
-        width:100%;
-        text-align:center;
-    }
-    .six-offers{
+    
+.main-menu ul{
+    display:flex;
+    flex-direction:row;
+    justify-content:center;
+    justify-content:flex-start;
+}
+    .main-menu li{
+        list-style-type:none;
         color:#292929;
-        padding:15px 15px;
-        margin:10px 10px;
+        /* padding:10px 100px 10px 10px; */
+        padding: 20px;
+        font-size:16px;
+        font-family:Arial, Helvetica, sans-serif;
+    } 
+    .top-menu-2 li{
+        /* padding:10px 50px 10px 10px; */
+        padding:20px;
+        font-size:16px;
+        font-family:Arial, Helvetica, sans-serif;
     }
     #main-content .row1to6-grid{
         display:grid;
@@ -120,21 +192,14 @@
         grid-template-rows:450px 450px 700;
         grid-gap:10px;
     }
-    .six-social-media-icons{
-        width:100%;
-        text-align: center;
+    #main-content .six-social-media-icons{
+        margin-top:50px;
+        padding-left:300px; 
     }
-    .six-footer-icon-links{
-        width:100%;
-        text-align: center;
+    #main-content .googleplay-apple-apps{
+        display: flex;
+        flex-direction: row;
+        margin-top:20px; 
+        padding-left:250px;
     }
-    .footer .top-footer-menu{
-        width:100%;
-    }
-    .footer .top-footer-menu six-footer-menus{
-        width:100%;
-    }
-    .main-footer-section .main-footer-menu{
-        width:100%;
-    }
-} */
+}
